Actualizar comentarios en controladores
